# mas_python_common

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml
zalfmas_common/: common.py  csv.py  fbp.py  geo.py  rect_ascii_grid_management.py  service.py
zalfmas_common/climate/: common_climate_data_capnp_impl.py  csv_file_based.py
zalfmas_common/model/: monica_io.py
zalfmas_common/soil/: soil_io.py
