[project]
name = "zalfmas-common"
version = "0.1.45"
description = "Common code for ZALF MAS projects"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" }]
requires-python = ">=3.12,<3.14"
dependencies = [
  "pycapnp>=2.2.2,<3",
  "pysodium>=0.7.18,<0.8",
  "pyproj>=3.7.2,<4",
  "scipy>=1.17.1,<2",
  "pandas>=3.0.3,<4",
  "psutil>=7.2.2,<8",
  "tomlkit>=0.15.0,<0.16",
  "zalfmas-capnp-schemas>=0.1.66,<0.2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "ruff>=0.15.14,<0.16",
  "ty>=0.0.40,<0.0.41",
  "basedpyright>=1.39.6,<2",
]

[tool.pixi.dependencies]
libsodium = ">=1.0.22,<2"

# Referencing local packages in editable mode for pixi
# [tool.pixi.pypi-dependencies]
# zalfmas-capnp-schemas = { path = "../mas_capnproto_schemas", editable = true }

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = ">=0.0.11,<0.0.12"

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "T",
  "G",
  "BLE",
  "COM",
  "PTH",
  "C417",
  "TRY",
  "ASYNC109",
  # "D100",
  # "D101",
]
ignore = ["E501", "COM812"]

[tool.basedpyright]
ignore = ["tests"]
typeCheckingMode = "basic"
